# rustomic

./: Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: rustdoc.yml
client/src/: main.rs
rustomic/: all.html  index.html  sidebar-items.js
rustomic/clock/: index.html  sidebar-items.js  struct.Instant.html  struct.MockClock.html  trait.Clock.html
rustomic/datom/: enum.Op.html  enum.Value.html  index.html  sidebar-items.js  struct.Datom.html
rustomic/query/: enum.Find.html  enum.QueryError.html  index.html  sidebar-items.js  struct.Predicate.html  struct.Query.html  struct.QueryResult.html  trait.Aggregator.html  trait.ToAggregator.html  type.Assignment.html  type.AssignmentResult.html  type.Predicate.html  type.QueryResult.html  type.Result.html
rustomic/schema/: constant.DB_ATTR_CARDINALITY_ID.html  constant.DB_ATTR_CARDINALITY_IDENT.html  constant.DB_ATTR_DOC_ID.html  constant.DB_ATTR_DOC_IDENT.html  constant.DB_ATTR_IDENT_ID.html  constant.DB_ATTR_IDENT_IDENT.html  constant.DB_ATTR_TYPE_ID.html  constant.DB_ATTR_TYPE_IDENT.html  constant.DB_ATTR_UNIQUE_ID.html  constant.DB_ATTR_UNIQUE_IDENT.html  constant.DB_TX_TIME_ID.html  constant.DB_TX_TIME_IDENT.html  index.html  sidebar-items.js
rustomic/storage/: enum.StorageError.html  enum.TxRestrict.html  index.html  sidebar-items.js  struct.Restricts.html  trait.ReadStorage.html  trait.Storage.html  trait.WriteStorage.html
rustomic/tx/: enum.AttributeValue.html  enum.Entity.html  enum.OperatedEntity.html  enum.TransactionError.html  index.html  sidebar-items.js  struct.AttributeOperation.html  struct.AttributeValue.html  struct.EntityOperation.html  struct.Operation.html  struct.Transaction.html  struct.TransctionResult.html  type.Result.html
search.desc/rustomic/: rustomic-desc-0-.js
server/: Cargo.toml  build.rs
server/proto/: query.proto
server/src/: edn.rs  parser.rs  server.rs
src/: clock.rs  datom.rs  db.rs  lib.rs  main.rs  query.rs  sample.txt  schema.rs  storage.rs  transactor.rs  tx.rs
src/api/: query.proto
src/query/: aggregation.rs  aggregator.rs  assignment.rs  clause.rs  database.rs  db.rs  mod.rs  pattern.rs  projector.rs  (+1 more)
tests/: storage.rs
(+199 files in other folders)
