[package]
name = "rustomic"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustomic"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quickcheck = "1.0.3"
rocksdb = "0.21.0"
rust_decimal = "1.30.0"
thiserror = "1.0.40"

[dev-dependencies]
quickcheck_macros = "1.0.0"
tempdir = "0.3"
