workspace = { members = [ "client","server"] }
[package]
name = "rustomic"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustomic"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.9.0"
quickcheck = "1.0.3"
rocksdb = "0.21.0"
rust_decimal = "1.30.0"
thiserror = "1.0.40"
time = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"

[dev-dependencies]
googletest = "0.11.0"
quickcheck_macros = "1.0.0"
tempdir = "0.3"

